--- a/L02P02_2022-CA-652_2022-SU-650/Views/clientes/agregarCliente.cshtml
+++ b/L02P02_2022-CA-652_2022-SU-650/Views/clientes/agregarCliente.cshtml
@@ -43,6 +43,6 @@
 </div>
 
 <footer class="bg-dark mt-5">
-    <p class="text-light text-center">@DateTime.Now.ToString() José Chinchilla</p><br />
+    <p class="text-light text-center mt-2">@DateTime.Now.ToString() José Chinchilla</p><br />
     <p class="text-light text-center">@DateTime.Now.ToString() Fabricio Sandoval</p><br />
 </footer>
